# kurumi

./: .gitignore  README.md  config.py  main.py  pyproject.toml
core/openai_api/: entrypoint.py  openai_entrypoint.py
imps/ds/: entrypoint.py
imps/telegram/: entrypoint.py
imps/telegram/routers/: chat.py
